# vertex-ai-cs

./: .env.dist  .gitignore  Dockerfile  README.md  index-vertex.py  index.py  main.py  main_test.py  main_test_improve.py  persist.py  pyproject.toml  run.sh  settings.py  utils.py
scripts/: unpack_to_data.py
tests/: test-00-happy-case-customer.yaml  test-01.yaml  test-02-context.yaml.disable  test-03-no-context-questions.yaml
